syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package org.loopring.lightcone.proto;

import "google/protobuf/any.proto";

message Msg {
    string name = 1;
}

message LocalStats {
    message ActorGroup {
        string group = 1;
        repeated string actors = 2;
    }

    repeated string roles = 1;
    repeated ActorGroup groups = 2;
}

message UploadDynamicSettings {
    DynamicSettings settings = 1;
}

message ProcessDynamicSettings {
    DynamicSettings settings = 1;
}

message EthereumAccessorSettings {
    repeated string roles = 1;
    int32 instances = 2;
}

message OrderManagerSettings {
    repeated string roles = 1;
    int32 instances = 2;
    repeated string market_ids = 3;
}

message CommonSettings {
    repeated string roles = 1;
    int32 instances = 2;
}

message MarketConfig {
    string tokenA = 1;
    string tokenB = 2;
}

message RingSubmitterSettings {
    string private_key = 1;
    int32 chain_id = 2;
    string contract = 3;
}

message RingExecuteStatusSettings {

}
message TokenValueSyncSettings {

}
message GasPriceSyncSettings {

}

// todo
message TokenRegistrySettings {

}

message MarketManagerSettings {
    repeated string roles = 1;
}

message OrderFillHistorySettings {
    repeated string roles = 1;
    int32 instances = 2;
}

message DynamicSettings {
    EthereumAccessorSettings ethereum_accessor_settings = 1;
    OrderManagerSettings order_manager_settings = 2;
    RingSubmitterSettings ring_submit_settings = 3;
    RingExecuteStatusSettings ring_executed_status_settings = 4;
    GasPriceSyncSettings gasprice_price_sync_settings = 5;
    TokenValueSyncSettings token_value_sync_settings = 6;
    MarketManagerSettings market_manager_settings = 7;
    OrderFillHistorySettings order_fill_history_settings = 8;

    map<string, MarketConfig> markets_settings = 106;
}





